# ORender

./: .gitignore  .ocamlformat  100000_intersections.txt  512x512-8rpp-1000_triangles_no_bvh.txt  README.md  computer_gfx.opam  cornell_box-512x512-128_rayspp.txt  dune-project  main  ocamlprof.dump
kdtree/: kd_tree_example.cpp  kdtree.h
lib/: algorithms.ml  algorithms.mli  brdf.ml  brdf.mli  bvh.ml  bvh.mli  camera.ml  camera.mli  colorspace.ml  colorspace.mli  common.ml  common.mli  db.ml  db.mli  dune  figures.ml  figures.mli  geometry.ml  geometry.mli  image.ml  image.mli  kdtree.ml  light.ml  light.mli  obj_parser.ml  pathtracing.ml  pathtracing.mli  photon.ml  photon.mli  photonmap.ml  photonmap.mli  ppm.ml  ppm.mli  tonemap.ml  tonemap.mli
lib/geometry/: direction.ml  direction.mli  geometry.ml  geometry.mli  matrix.ml  matrix.mli  point.ml  point.mli  transformations.ml  transformations.mli
lib/kdtree/: kdtree.ml  multidim.ml
lib/pathtracing/: bindings.ml  bindings.mli  pathtracing.ml  pathtracing.mli
lib/photonmap/: first_phase.ml  kernels.ml  photon.ml  photon.mli  photonmap.ml  photonmap.mli  second_phase.ml
lib/scene/: camera.ml  camera.mli  figures.ml  figures.mli  light.ml  light.mli
mtl/: Tiny_Cube.mtl  camel.mtl  camel2.mtl  chess_board.mtl  image.mtl
test/: dune  test_geometry.ml  test_intersections.ml  test_photonmap.ml
